--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,30 @@
     margin: 0;
     padding: 0;
 }
-
+p::selection{
+    background-color: rgb(0, 59, 221);
+    color: black;
+}
+h1::selection{
+    background-color: rgb(0, 59, 221);
+    color: black;
+}
+h2::selection{
+    background-color: rgb(0, 59, 221);
+    color: black;
+}
+h3::selection{
+    background-color: rgb(0, 59, 221);
+    color: black;
+}
+h4::selection{
+    background-color: rgb(0, 59, 221);
+    color: black;
+}
+a::selection{
+    background-color: rgb(0, 59, 221);
+    color: black;
+}
 /* ------Header------ */
 
 .navbar-brand{
@@ -370,12 +393,13 @@ h1{
     color: rgb(0, 0, 0);
     background-color: rgba(46, 43, 68, 0.644);
     border-radius: 5px;
-    width: 80px;
-    height: 20px;
-    font-size: 18px;
-    margin-top: 2px;
+    width: 83px;
+    height: 25px;
+    font-size: 20px;
     display: flex;
     justify-content: center;
+    align-items: center;
+    margin-top: 2px;
     transition: 1.5s;
 }
 .ps .ps-2 .ps-2-producto h3:hover{
@@ -427,12 +451,13 @@ h1{
     color: rgb(0, 0, 0);
     background-color: rgba(46, 43, 68, 0.644);
     border-radius: 5px;
-    width: 80px;
-    height: 20px;
-    font-size: 18px;
-    margin-top: 2px;
+    width: 83px;
+    height: 25px;
+    font-size: 20px;
     display: flex;
     justify-content: center;
+    align-items: center;
+    margin-top: 2px;
     transition: 1.5s;
 }
 .xbox .xbox-2 .xbox-2-producto h3:hover{
@@ -484,12 +509,13 @@ h1{
     color: rgb(0, 0, 0);
     background-color: rgba(46, 43, 68, 0.644);
     border-radius: 5px;
-    width: 80px;
-    height: 20px;
-    font-size: 18px;
+    width: 83px;
+    height: 25px;
+    font-size: 20px;
     margin-top: 2px;
     display: flex;
     justify-content: center;
+    align-items: center;
     transition: 1.5s;
 }
 .nintendo .nintendo-2 .nintendo-2-producto h3:hover{
@@ -563,16 +589,20 @@ h1{
     background-color: rgba(46, 43, 68, 0.644);
     border-radius: 5px;
     width: 83px;
-    height: 20px;
+    height: 25px;
     font-size: 20px;
     display: flex;
     justify-content: center;
+    align-items: center;
     transition: 1.5s;
 }
 .catalogo-2 .catalogo-2-1 .producto1 h3:hover{
     transform: scale(1.1);
     color: white;
 } 
+.catalogo-2 .catalogo-2-1 div:nth-child(1) p{
+    height: 3px;
+}
 .nuevo{
     display: flex;
     justify-content: center;
@@ -607,15 +637,22 @@ h1{
     background-color: rgba(46, 43, 68, 0.644);
     border-radius: 5px;
     width: 83px;
-    height: 20px;
+    height: 25px;
     font-size: 20px;
     display: flex;
     justify-content: center;
+    align-items: center;
     transition: 1.5s;
 }
 .catalogo-2 .catalogo-2-2 .producto2 h3:hover{
     transform: scale(1.1);
     color: white;
+}
+.catalogo-2 .catalogo-2-2 div:nth-child(2) p{
+    height: 3px;
+}
+.catalogo-2 .catalogo-2-2 div:nth-child(3) p{
+    height: 3px;
 }
 .popover-boton{
     display: flex;
@@ -673,9 +710,11 @@ h1{
     background-color: rgba(46, 43, 68, 0.644);
     border-radius: 5px;
     width: 83px;
+    height: 25px;
     font-size: 20px;
     display: flex;
     justify-content: center;
+    align-items: center;
     transition: 1.5s;
 }
 .ofertas .ofertas-2 .oferta h3:hover{
@@ -698,6 +737,9 @@ h1{
 .col-12{
     display: flex;
     justify-content: center;
+}
+.col:focus{
+    border-color: rgb(0, 59, 221);
 }
 
 /* ------Footer------ */
