--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,8 @@
 @import "./base/generales";
 @import "./components/footer";
-@import "./components/main";
+@import "./components/index";
+@import "./components/consolas";
+@import "./components/videojuegos-y-prodv";
+@import "./components/contacto";
 @import "./components/header";
 @import "./responsive";
