--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -1,10 +1,10 @@
 /*-----Responsive-----*/
 
 @media screen and (max-width: 1250px){
-    .galeria-2{
+    .galeria .galeria-2{
         justify-content: center;
     }
-    .galeria-2 .foto img{
+    .galeria .galeria-2 .foto img{
         width: 210px;
         height: 105px;
     }
@@ -14,11 +14,11 @@
         width: 650px;
         height: 130px;
     }
-    .galeria-2{
+    .galeria .galeria-2{
         grid-auto-rows: 100px;
         justify-content: center;
     }
-    .galeria-2 .foto img{
+    .galeria .galeria-2 .foto img{
         width: 160px;
         height: 80px;
         grid-area: foto;
@@ -39,11 +39,11 @@
     }
 }
 @media screen and (max-width: 600px){
-    .consolas-1 .consolas-1-empresa{
+    .consolas .consolas-1 .consolas-1-empresa{
         width: 150px;
         height: 322px;
     }
-    .consolas-1 .consolas-1-empresa img{
+    .consolas .consolas-1 .consolas-1-empresa img{
         width: 145px;
         height: 260px;
     }
@@ -51,11 +51,11 @@
         width: 550px;
         height: 100px;
     }
-    .galeria-2{
+    .galeria .galeria-2{
         grid-auto-rows: 80px;
         justify-content: center;
     }
-    .galeria-2 .foto img{
+    .galeria .galeria-2 .foto img{
         width: 120px;
         height: 60px;
         grid-area: foto;
@@ -66,13 +66,17 @@
     .consolas{
         height: 380px;
     }
-    .consolas-1 .consolas-1-empresa{
+    .consolas .consolas-1 .consolas-1-empresa{
         width: 130px;
         height: 300px;
+        font-size: 15px;
     }
-    .consolas-1 .consolas-1-empresa img{
-        width: 128px;
+    .consolas .consolas-1 .consolas-1-empresa img{
+        width: 125px;
         height: 230px;
+    }
+    .consolas .consolas-1 .consolas-1-empresa h3{
+        font-size: 20px;
     }
     .video .video-2 .video-2-caja{
         height: 220px;
@@ -83,7 +87,7 @@
     }
     .videojuegos .videojuegos-1{
         width: 360px;
-        height: 200px;
+        height: 210px;
     }
     .videojuegos .videojuegos-1 img{
         width: 355px;
@@ -98,17 +102,17 @@
     }
     .productosv .productosv-1{
         width: 360px;
-        height: 200px;
+        height: 210px;
     }
     .productosv .productosv-1 img{
         width: 355px;
         height: 170px;
     }
-    .galeria-2{
+    .galeria .galeria-2{
         grid-auto-rows: 70px;
         justify-content: center;
     }
-    .galeria-2 .foto img{
+    .galeria .galeria-2 .foto img{
         width: 110px;
         height: 50px;
         grid-area: foto;
@@ -127,26 +131,26 @@
     .consolas{
         height: 350px;
     }
-    .consolas-1 .consolas-1-empresa{
+    .consolas .consolas-1 .consolas-1-empresa{
         width: 110px;
         height: 270px;
     }
-    .consolas-1 .consolas-1-empresa img{
+    .consolas .consolas-1 .consolas-1-empresa img{
         width: 105px;
         height: 210px;
     }
-    .consolas-1 .consolas-1-empresa h3{
+    .consolas .consolas-1 .consolas-1-empresa h3{
         font-size: 15px;
     }
     .metodos img{
         width: 380px;
         height: 70px;
     }
-    .galeria-2{
+    .galeria .galeria-2{
         grid-auto-rows: 70px;
         justify-content: center;
     }
-    .galeria-2 .foto img{
+    .galeria .galeria-2 .foto img{
         width: 110px;
         height: 50px;
         grid-area: foto;
